# eo-flow

./: .env.template  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
eoflow/: definitions.py
eoflow/cloud/: __init__.py  materialize.py
eoflow/cloud/common/: pipes.py  utils.py
eoflow/cloud/gcp/: materialize.py  pipes.py  utils.py
eoflow/core/: __init__.py  catalogue.py  config.py  logging.py  materialize.py  resize.py  utils.py
eoflow/dag/: materialise.py  materialize.py
eoflow/models/: __init__.py  archive.py  catalogue.py  granule.py  models.py
eoflow/tiles/: catalogue.py
infra/: DockerfileMaterialize  cloudbuild.yaml
tests/: conftest.py  test_archive_construction.py  test_eager_materialize.py  test_granule_construction.py  test_local_materialise.py  test_local_materialize.py  test_tile_construction.py
tests/data/: aoi.geojson  parks.geojson  sample_index_items.json
